# agent

./: .env.example  .gitignore  AGENT.md  Pipfile  README.md  pyproject.toml
agent/: __main__.py  config.py  main.py
agent/core/: orchestrator.py  planner.py  session.py
agent/llm/: client.py  parser.py  prompts.py
agent/memory/: compressor.py  long_term.py  short_term.py
agent/skills/: manager.py
agent/skills/builtin/: commit.md  docs.md  fix.md  review.md  summarize.md  test.md
agent/tools/: base.py  code_tools.py  file_tools.py  memory_tools.py  registry.py  system_tools.py  web_tools.py
agent/utils/: logger.py
