[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.1.0"
description = "Autonomous AI Agent powered by Ollama"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4",
    "chromadb>=0.5",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13",
    "typer>=0.12",
    "aiohttp>=3.9",
    "ddgs>=0.1",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
]

[project.scripts]
agent = "agent.main:app"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
